devand-web/src/snapshots/devand_web__pages__test__password_reset_ok.snap
---
source: devand-web/src/pages.rs
expression: response.body_string().unwrap()
---

<!DOCTYPE html>
<html lang="en">

<head>
  <meta charset="utf-8" />
  <meta name="viewport" content="width=device-width, initial-scale=1">
  <title>DevAndDev - Reset your password</title>
  <link rel="stylesheet" href="/static/ui-HASHPLACEHOLDER/pure.css">
  <link rel="stylesheet" href="/static/ui-HASHPLACEHOLDER/grids-responsive.css">
  <link rel="stylesheet" href="/static/ui-HASHPLACEHOLDER/main.css">
  <link rel="apple-touch-icon-precomposed" href="/static/favicon/favicon-180.png">
  <link rel="icon" href="/static/favicon/favicon-32.png" sizes="32x32">
  <link rel="icon" href="/static/favicon/favicon-128.png" sizes="128x128">
  <link rel="icon" href="/static/favicon/favicon-180.png" sizes="180x180">
  <link rel="icon" href="/static/favicon/favicon-196.png" sizes="196x196">
</head>

<body>
<div class="container">
    <header class="main-header">
    <div class="main-header-content">
      <div class="pure-menu pure-menu-horizontal">
        <ul class="pure-menu-list">
          <li class="pure-menu-item">
            <a href="/" title="DevAndDev" class="pure-menu-link"><img src="/static/favicon/favicon-128.png" /></a>
          </li>
    
          <li class="pure-menu-item">
            <a href="/login" class="pure-menu-link">Sign In</a>
          </li>
          <li class="pure-menu-item">
            <a href="/join" class="pure-menu-link">Sign Up</a>
          </li>
    
        </ul>
      </div>
    </div>
  </header>


  <div class="content">
    <h1>Reset your password</h1>

    

    <form action="/password_reset" method="post" accept-charset="utf-8" class="pure-form pure-form-stacked">
      <fieldset>
        <p>
          Enter your user account's verified email address and we will send you a password reset link.
        </p>
        <div class="pure-control-group">
          <input type="email" name="email" id="email" value="" placeholder="Email" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
        </div>

        <div class="pure-controls">
          <button type="submit" class="pure-button pure-button-primary">Send password reset email</button>
        </div>
      </fieldset>
    </form>


  </div>
  <footer class="main-footer">
  <div class="main-footer-content">
    
    <div class="devand-cookie-policy">
      <p>We use cookies in the delivery of our services. To learn about the cookies we use and information about your preferences and opt-out choices, please <a href="/privacy">click here</a>. By using our platform you agree to our use of cookies.</p>
    </div>
    
    <ul class="pure-g">
      <li class="pure-u-1 pure-u-md-1-3">
        <a href="/help">Help</a>
      </li>
      <li class="pure-u-1 pure-u-md-1-3">
        <a href="/code-of-conduct">Code of Conduct</a>
      </li>
      <li class="pure-u-1 pure-u-md-1-3">
        <a href="/privacy">Privacy Policy</a>
      </li>
      <li class="pure-u-1 pure-u-md-1-3">
        <a href="https://github.com/alepez/devand">Code</a>
      </li>
      <li class="pure-u-1 pure-u-md-1-3">
        <a href="https://alepez.me">© 2020 Alessandro Pezzato</a>
      </li>
    </ul>
  </div>
</footer>

</div>
</body>

</html>



